server/compilers/goLiteJS/src/test/ml1/invalid/func10.go
// missing left parenthesis
package main

func f) {
    return
}
